fix labels, alignment, scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
-  /* text-align: center; */
-  display: flex;
-  align-items: center;
+  margin: 0 auto;
+  width: 850px;
+  /* display: flex;
   justify-content: center;
+  align-items: center; */
   /* margin: 0 auto; */
 }
