--- a/src/components/ACWF.css
+++ b/src/components/ACWF.css
@@ -1,4 +1,5 @@
 .selector_container {
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
